Adding fix from MS Documentation
https://learn.microsoft.com/en-us/aspnet/core/razor-pages/ui-class?view=aspnetcore-8.0&tabs=visual-studio#typescript-integration

--- a/RazorClassLibrary/RazorClassLibrary.csproj
+++ b/RazorClassLibrary/RazorClassLibrary.csproj
@@ -6,6 +6,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <TypescriptOutDir>wwwroot</TypescriptOutDir>
+    <PrepareForBuildDependsOn>
+      CompileTypeScript;
+      GetTypeScriptOutputForPublishing;$(PrepareForBuildDependsOn)
+    </PrepareForBuildDependsOn>
+    <TypeScriptModuleKind>ESNext</TypeScriptModuleKind>
+  </PropertyGroup>
+
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
