--- a/RazorClassLibrary/RazorClassLibrary.csproj
+++ b/RazorClassLibrary/RazorClassLibrary.csproj
@@ -7,16 +7,22 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <TypescriptOutDir>wwwroot</TypescriptOutDir>
     <PrepareForBuildDependsOn>
+      FindConfigFiles;
       CompileTypeScript;
-      GetTypeScriptOutputForPublishing;$(PrepareForBuildDependsOn)
+      CompileTypeScriptWithTSConfig;
+      GetTypeScriptOutputForPublishing;
+      $(PrepareForBuildDependsOn)
     </PrepareForBuildDependsOn>
-    <TypeScriptModuleKind>ESNext</TypeScriptModuleKind>
   </PropertyGroup>
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="wwwroot\*.js;wwwroot\*.js.map" />
+    <None Include="wwwroot\*.js;wwwroot\*.js.map" />
   </ItemGroup>
 
   <ItemGroup>
